# embedded-aht20

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: audit.yml  general.yml
examples/: measurement.rs
src/: lib.rs
