[package]
name = "embedded-aht20"
version = "0.1.1"
authors = ["Ghislain MARY <ghislain@ghislainmary.fr>"]
repository = "https://github.com/ghismary/embedded-aht20"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the AHT20 temperature & humidity sensor."
documentation = "https://docs.rs/embedded-aht20/"
readme = "README.md"
keywords = ["temperature", "humidity", "sensor", "aht20", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/ghismary/embedded-aht20"
include = ["/**/*.rs", "/Cargo.toml", "README.md"]
edition = "2021"

[features]
default = []
async = []

[dependencies]
bitflags = "2.6.0"
crc = "3.2.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
maybe-async-cfg = "0.2.5"
weather-utils = { version = "0.2.0", features = ["no-std"] }

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", default-features = false, features = [
    "eh1",
] }
linux-embedded-hal = "0.4.0"
